unpackaged/main/default/objects/Quote_Request__c/fields/FOB_Calculation__c.field-meta.xml
<CustomField>
    <fullName>FOB_Calculation__c</fullName>
    <description>FOB Calculation value. Entered only by State Managers for New Hampshire Quote Requests.</description>
    <label>FOB Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>