unpackaged/main/default/objects/Quote_Request__c/fields/Item_Available__c.field-meta.xml
<CustomField>
    <fullName>Item_Available__c</fullName>
    <label>Item Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>