unpackaged/main/default/objects/Quote_Request__c/fields/Price_Needed__c.field-meta.xml
<CustomField>
    <fullName>Price_Needed__c</fullName>
    <description>A field to represent the need for a Price Request. If 'Yes', Commercial Finance is needed to determine the price before generating the quote request. If 'No', Commercial Finance is not needed and the quote request can be generated without their approval.</description>
    <inlineHelpText>Indicates if the quote request's item needs price approval</inlineHelpText>
    <label>Price Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>