unpackaged/main/default/objects/Quote_Request__c/fields/Quote_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Quote_Recipient__c</fullName>
    <formula>Case__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Recipient</label>
    <type>Text</type>
</CustomField>