unpackaged/main/default/objects/Quote_Request__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Special Order</fullName>
            </value>
            <value>
                <fullName>Listed</fullName>
            </value>
            <value>
                <fullName>State Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>