unpackaged/main/default/objects/Quote_Request__c/fields/Unavailability_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Unavailability_Reason_Other__c</fullName>
    <description>The counterpart of the Unavailability Reason picklist. Is used when user selects "Other" as a reason.</description>
    <inlineHelpText>Value if Unavailability Reason is set as "Other"</inlineHelpText>
    <label>Unavailability Reason (Other)</label>
    <type>TextArea</type>
</CustomField>