unpackaged/main/default/objects/Quote_Request__c/validationRules/Check_State_n_Priority_for_QuoteRequest.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_State_n_Priority_for_QuoteRequest</fullName>
    <active>true</active>
    <errorConditionFormula>OR
(
 ISPICKVAL(Case__r.State__c,''),
 ISPICKVAL(Case__r.Priority,'')
)</errorConditionFormula>
    <errorMessage>Please enter State in the Parent Quote Request Case!</errorMessage>
</ValidationRule>